--- a/FrontEnd/CSS/index.css
+++ b/FrontEnd/CSS/index.css
@@ -62,11 +62,13 @@ a {
     justify-content: center;
     align-items: center;
     border: 1px solid black;
-    background-color:  rgb(69, 134, 255);
-    margin: 0;
+    background-color:  rgb(105, 105, 107);
+    margin-left: 30px;
     padding: 20px;
     width: 75%;
     box-sizing: border-box;
+    border-radius: 20px;
+    font-size: 25px;
 }
 
 article{
@@ -74,7 +76,7 @@ article{
     justify-content: center;
 }
 aside{
-    margin: 0;
+    margin-left: 0;
     border: 1px solid black;
     width: 25%;
     padding-left: 10px;
