--- a/FrontEnd/CSS/index.css
+++ b/FrontEnd/CSS/index.css
@@ -5,8 +5,8 @@ html, body {
 }
 
 body {
-    background: rgb(255,255,255);
-    background: linear-gradient(135deg, rgba(255,255,255,1) 34%, rgba(255,0,0,1) 93%);
+    background: rgb(112, 112, 112);
+    background: linear-gradient(135deg, rgb(102, 102, 102) 34%, rgb(0, 26, 255) 93%);
 }
 
 .Titulo {
@@ -14,7 +14,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: center;
-    border: 1px solid rgb(0, 0, 0);
     background-color: rgb(69, 134, 255);
     margin: 0;
     padding: 10px;
@@ -32,10 +31,8 @@ ul {
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 10px;
-    border: 1px solid black;
     margin: 5px;
     background-color: lightgray;
-    cursor: grab;
 }
 
 a {
@@ -61,8 +58,8 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
-    background-color:  rgb(105, 105, 107);
+    
+    background-color:  rgb(208, 208, 212);
     margin-left: 30px;
     padding: 20px;
     width: 75%;
@@ -76,11 +73,10 @@ article{
     justify-content: center;
 }
 aside{
-    margin-left: 0;
     border: 1px solid black;
     width: 25%;
-    padding-left: 10px;
+    padding-left: 20px;
     background-color: lightgray;
-    border-radius: 20px;
+    margin-left: 20px;
      
 }
