--- a/FrontEnd/CSS/registrarMovel.css
+++ b/FrontEnd/CSS/registrarMovel.css
@@ -36,3 +36,13 @@ body {
     background: rgb(112, 112, 112);
     background: linear-gradient(135deg, rgb(102, 102, 102) 34%, rgb(0, 26, 255) 93%);
 }
+
+.Titulo {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(69, 134, 255);
+    margin: 0;
+    padding: 10px;
+}
