--- a/FrontEnd/CSS/index.css
+++ b/FrontEnd/CSS/index.css
@@ -158,3 +158,52 @@ aside h2 {
 #btnPedir:hover {
     background-color: #0b5ed7; /* Azul mais escuro */
 }
+
+
+/* Estilo para o aside (categorias) */
+aside {
+    width: 25%;
+    padding: 20px;
+    background-color: #f8f9fa; /* Cinza claro */
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-right: 20px;
+}
+
+aside h2 {
+    margin-top: 0;
+    color: #0d6efd; /* Azul do Bootstrap */
+    font-size: 1.5em;
+    text-align: center;
+    border-bottom: 2px solid #0d6efd;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+aside ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+aside ul li {
+    margin-bottom: 10px;
+}
+
+aside ul li a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    display: block;
+    padding: 10px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease;
+}
+
+aside ul li a:hover {
+    background-color: #0d6efd; /* Azul do Bootstrap */
+    color: white;
+    transform: translateX(10px);
+}
